<resources>
    <string name="app_name">Breaking MAD</string>
    <string name="intro_string">INTRO STRING</string>
    <string name="b1_string">Global Balance</string>
    <string name="b2_string">Groups</string>
    <string name="b3_string">Activity</string>
    <string name="balance_name">Global Balance</string>
    <string name="balance_string">000.00€</string>
    <string name="b4_string">Add expense</string>
    <string name="b5_string">Add new Group</string>
    <string name="global_string">Global Balance</string>
    <string name="b5_string_show_group_activity">Show Group Activity</string>
    <string name="b6_string">Mobile</string>
    <string name="account_menu_item_string">Account</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="total_user_global_string">000.00€</string>
    <string name="name_user_global_string">Name</string>
    <string name="groupspinner_prompt">Group</string>
    <string name="currencyspinner_prompt">Currency</string>
    <string name="share_menu">Share</string>
    <string name="setting_menu">Setting</string>
    <string name="contact_menu">Contact us</string>
    <string name="newexpense_title">Title</string>
    <string name="newexpense_title2">New Expense</string>
    <string name="newexpense_title3">New Expense on group</string>
    <string name="newexpense_amount">Amount</string>
    <string name="newexpense_description">Description</string>
    <string name="newexpense_data">Date</string>
    <string name="newexpense_category">Category</string>
    <string name="backmain_title">Really Exit?</string>
    <string name="backmain_message">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="toast_mess_settings">you selected Settings option</string>
    <string name="toast_mess_contactus">you selected Contact Us option</string>
    <string name="toast_mess_share">you selected Share option</string>
    <string name="toast_clickedgroup">Clicked Group:</string>
    <string name="toast_emptyaddexpense">Some Fields are empty</string>
    <string name="backexpe_message">Are you sure you want to delete this expense?</string>
    <string name="backexpe_title">Delete expense?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register user</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_email">Please, enter email</string>
    <string name="enter_password">Please, insert password</string>
    <string name="progress_bar_register">Registering user...</string>
    <string name="successful_registration">Registered successful</string>
    <string name="unsuccessful_registration">Register unsuccesfully, password at least 6 chars </string>
    <string name="already_registered"><u>Already registered? Sign here</u></string>
    <string name="titleregisteractivity">Registration</string>
    <string name="titleloginactivity">Log in</string>
    <string name="action_login">Log in</string>
    <string name="not_registered"><u>Not registered? Register here</u></string>
    <string name="logout_menu">Log out</string>
    <string name="progress_bar_login">Login Please wait..</string>
    <string name="profile_menu">Profile</string>
    <string name="profile_title_string">My profile</string>
    <string name="prompt_name_profile">Name</string>
    <string name="prompt_surname_profile">Surname</string>
    <string name="prompt_email_profile">Email</string>
    <string name="action_save_profile">Save Information</string>
    <string name="toast_mess_save_infouser">Saving information..</string>
    <string name="wrong_login">Email or password incorrect</string>
    <string name="backprofile_message">Do you want to exit from profile?</string>
    <string name="backprofile_title">Come back?</string>
    <string name="title_activity_read_profile">ReadProfileActivity</string>
    <string name="action_modify_profile">Modify profile\'s image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_group_groupName">NameGroup</string>
    <string name="activity_group_member_mail">MemberMail</string>
    <string name="activity_detail_category">Category:</string>
    <string name="activity_detail_description">Telephone\'s Bill... We have to pay me as soon as possible, please.</string>
    <string name="backgroup_title">Delete Group?</string>
    <string name="backgroup_message">Are you sure to delete this group?</string>
    <string name="activity_group_buttonpassaddmember">Go to add Member</string>
    <string name="toast_addedusergroup">Added User</string>
    <string name="activity_detail_title">Telephone</string>
    <string name="user_not_registered_title">Invite?</string>
    <string name="user_not_registered_msg">Do you want to invite user?</string>
    <string name="toast_addedusergroupAlreadyAdded">Already added</string>
    <string name="invitation_title">Invite?</string>
    <string name="invitation_message">I want to invite you into my new Group, insert this PIN into "invite": </string>
    <string name="invitation_deep_link">https://eek7a.app.goo.gl/NLtk</string>
    <string name="invitation_custom_image">http://turningpointla.org/wp-content/uploads/2014/06/Breaking-Mad-692x304.jpg</string>
    <string name="invitation_cta">Join us!</string>
    <string name="email_sent">Message sent!</string>
    <string name="email_notsent">Message NOT sent</string>
    <string name="invitation_hintpin">PIN</string>
    <string name="invitationactivity_title">Invitation</string>
    <string name="invitationactivity_message">If you have been invited into one group, please put your PIN here to join into the group:</string>
    <string name="enterpinplease">Enter PIN please</string>
    <string name="pinnotregistred">This PIN is not associated with any group</string>
    <string name="invitation_menu">Invitations </string>
    <string name="expense_label_pagato">Paid by: </string>
    <string name="pay">SETTLE UP</string>
    <string name="payment_title">Payment</string>
    <string name="payment0">Insert amount different from 0 </string>
    <string name="category_activity_string">Category</string>
    <string name="group_activity_global_string">Group</string>
    <string name="prompt_password_reg">Password (min 6 chars)</string>
    <string name="upload_ok">Upload Done</string>
    <string name="dialog_image_profile">Uploading image</string>
    <string name="upload_no">Not done</string>
    <string name="action_modify_profile_camera">Take Photo From Camera</string>
    <string name="dialog_image_profile_loading">Loading</string>
    <string name="category_luce">Light</string>
    <string name="category_gas">Gas</string>
    <string name="category_internet">Internet</string>
    <string name="category_generale">General</string>
    <string name="category_cibo">Food</string>
    <string name="category_regali">Gift</string>
    <string name="expense_addedOn">Added on:</string>
    <string name="expese_amount">Amount:</string>
    <string name="text_pagatoda_expense_string">Paid by:</string>
    <string name="text_diviso_expense_string">Divided as:</string>
    <string name="button_diviso_expense_string">Choose</string>
    <string name="clear_all_label">Clear</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="no_amount">Please insert amount grather than 0</string>
    <string name="no_delete_group">Impossible to eliminate , all users should have balance equals to 0</string>
    <string name="yes_delete_group">Elimate</string>
    <string name="message_deleteGroup">has been deleted.\nTake home to return to the main page</string>
    <string name="delete">Delete</string>
    <string name="impossible_to_delete">Impossible to delete, balance for this user is not 0</string>
    <string name="impossible_to_come_back">It is impossible to come back, please press home</string>
    <string name="progress_bar_db">Loading data...</string>
    <string name="text_view_setting">Settings</string>
    <string name="textview_contact">Contact us</string>
    <string name="message_contact">Thank you for using this App.\nIf you have any problem please contact us on this email:\nroberto.spaz@virgilio.it</string>
    <string name="language_setting">Language :</string>
    <string name="deletegroup_title">Delete Group?</string>
    <string name="deletegroup_message">Are you sure to delete this group?</string>
    <string name="deleteactivity_title">Delete Activity?</string>
    <string name="deleteactivity_message">Are you sure to delete this activity?</string>
    <string name="deleteuser_title">Delete User?</string>
    <string name="deleteuser_message">Are you sure to delete this user?</string>
    <string name="button_user_group">USERS</string>
    <string name="button_attivita_group">ACTIVITIES</string>
    <string name="button_grafico_group">STATISTICS</string>
    <string name="addUserToGroup_menu">Add User To Group</string>
    <string name="modifyGroup_menu">Modify Group</string>
    <string name="deleteGroup_menu">Delete Group</string>
    <string name="primaAttivita_group">YOUR GROUPS</string>
    <string name="open_drawer">OPEN</string>
    <string name="close_drawer">CLOSE</string>
    <string name="title_activity_ddddddddd">dddddddddActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="textview_addUserToGroup">Add User To Group</string>
    <string name="textview_modifyGroup">Modify Group</string>
    <string name="textview_payment">Payment</string>
    <string name="textview_addGroup">Add Group</string>
    <string name="textview_addExpense">Add Expense</string>
    <string name="tideve">Owes you</string>
    <string name="tideve2">Owes you</string>
    <string name="devi">You borrowed</string>
    <string name="save_string">SAVE</string>
    <string name="textview_detail_Expense">Detail Expense</string>
    <string name="deve">owes</string>
    <string name="to">to</string>
    <string name="toast_notequal">Division must be equal to the total</string>
    <string name="tv_init_payment">Pay what you want.</string>
    <string name="custom">Custom Amount</string>
    <string name="payment_detail">Payment detail:</string>
    <string name="sender">Sender:</string>
    <string name="receiver">Receiver:</string>
    <string name="group">Group:</string>
    <string name="amount">Amount:</string>
    <string name="confirm">Confirm</string>
    <string name="title_graph">Personal Graph - year :</string>
    <string name="months">Months</string>
    <string name="category_all">All</string>
    <string name="date_picker_title">Date of expense:</string>
    <string name="welcome">Welcome!</string>
    <string name="text">Let\'s start to split your expenses</string>
    <string name="modify_activity_menu_item">Modify activity</string>
    <string name="delete_activity_menu_item">Delete activity</string>
    <string name="textview_modifyExpense">Modify Expense</string>
    <string name="impossible_to_delete_act">Impossible to modify a Payment, delete it</string>
</resources>