<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <item
        android:id="@+id/action_myprofile"
        android:title="@string/profile_menu"



        />

    <item
        android:id="@+id/action_invitation"
        android:title="@string/invitation_menu"



        />
<!--
    <item
        android:id="@+id/action_share"
        android:title="@string/share_menu"


        />-->
    <item
    android:id="@+id/action_settings"
        android:title="@string/setting_menu"

    />



    <item
    android:id="@+id/action_contactus"
    android:title="@string/contact_menu"



    />



    <item
        android:id="@+id/action_logout"
        android:title="@string/logout_menu"



        />

</menu>