<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.faust.mytestapplication1.RegisterActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:src="@drawable/appname"

        />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:background="@drawable/shape_login_register"
    android:padding="12dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleregisteractivity"
        android:id="@+id/textView_register"
        android:layout_gravity="center_horizontal" />


    <EditText
        android:id="@+id/name_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#4caf50"
        android:hint="@string/prompt_name_profile"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/surname_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#4caf50"
        android:hint="@string/prompt_surname_profile"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#4caf50"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />


    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_reg"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#4caf50"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:id="@+id/textview_alreadyregistered"
        />

    <ImageButton style="@style/AppTheme"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:id="@+id/imageButtonLogin"
        android:src="@drawable/register256x256"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:padding="12dp"
        android:background="@drawable/buttoncircular"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        />


</LinearLayout>

</RelativeLayout>