<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"

    tools:context="com.example.faust.mytestapplication1.ReadProfileActivity">



    <TextView

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title_string"
        android:textAlignment="center"
       />



    <TextView
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name_profile"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"

        android:maxLines="1" />



    <TextView
        android:id="@+id/name_real_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name_profile"


        android:maxLines="1" />

    <TextView
        android:id="@+id/surname_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_surname_profile"
        android:maxLines="2"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


    <TextView
        android:id="@+id/surname_real_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name_profile"


        android:maxLines="1" />


    <Button
        android:id="@+id/edit_profile_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_modify_profile"
        android:textStyle="bold" />



</LinearLayout>
